# Spectrum-Z0ne

./: .env  Cargo.toml  README.md  docker-compose.yml  main.py  requirements.txt  run_bridge.py  stream_manager.py
.github/workflows/: ci.yml  publish.[span_7](start_span)yml  publish.yml
1_firmware/: ipc_bridge.py
1_firmware/display_driver/: ssd1306_driver.py
1_firmware/electrochromic_ctrl/: lens_driver.py  main.py
1_firmware/sensor_fusion/: fusion_engine.py
2_companion_app/ai_pipeline/: processor.py
2_companion_app/dashboard_renderer/: layout_engine.py
2_companion_app/webrtc_streamer/: Dockerfile
3_ai_services/gemini_bridge/: Dockerfile  main.py  requirements.txt
3_ai_services/local_face_auth/: authenticator.py
4_infrastructure/device_management/: health_check.py
ai_service/: processor.py
src/: lib.rs  main.rs
webrtc_streamer/: server.py  signaling.py
